<resources>
    <string name="app_name">photoAndroid</string>
    <string name="add">add</string>
    <string name="title_activity_add_album">AddAlbum</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_label">name</string>
    <string name="save_label">create</string>
    <string name="cancel_label">cancel</string>
    <string name="title_activity_photo_display">PhotoDisplay</string>
    <string name="delete_album">delete album</string>
    <string name="rename_album">rename album</string>
    <string name="add_photo">add photo</string>
    <string name="app_reset">reset</string>
    <string name="title_activity_content_add_photo">content_add_photo</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add_label">ADD</string>
    <string name="browse_label">browse</string>
    <string name="path_label">path:</string>
    <string name="sort_photo">sort photo</string>
    <string name="title_activity_rename_album">renameAlbum</string>
    <string name="rename">rename</string>
    <string name="delete_photo">delete photo</string>
    <string name="addTag">add tag</string>
    <string name="removeTag">remove tag</string>
    <string name="person">person: </string>
    <string name="location">location: </string>
    <string name="movePhoto">move</string>
    <string name="album_name">destination album</string>
    <string name="move_lable">move</string>
    <string name="title_activity_search_photo">searchPhoto</string>
    <string name="title_activity_search_result">searchResult</string>
    <string name="search_photo">search photo</string>
    <string name="searchByPerson">Search By Person</string>
    <string name="searchByLocation">Search By Location</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="search">search</string>
</resources>