<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">

    <!--  Name label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/path_label"
        />

    <!-- Name field -->

    <!--  Year label -->



    <!--  Buttons for save and cancel -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="375dp"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/photo_path"
            android:layout_width="255dp"
            android:layout_height="74dp"
            android:background="@android:drawable/editbox_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="browsePhoto"
            android:text="@string/browse_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_name"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/addPhoto_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            android:onClick="addPhoto"
            android:text="@string/add_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/addPhoto_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/white"
            android:onClick="cancelAddPhoto"
            android:text="@string/cancel_label"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>

